--- a/true_notes.tex
+++ b/true_notes.tex
@@ -124,7 +124,7 @@
 \def\E{\mathcal{E}}
 %\def{\Tr}{\cal{Tr}}
 
-\def\half{1\over2}
+\def\half{{1\over2}}
 \def\gab{g_{\alpha\beta}}
 \def\gabinv{g^{\alpha\beta}}
 \def\gmunu{g_{\mu\nu}}
@@ -284,6 +284,7 @@ level.
 \input true_4.tex
 \input true_5.tex
 \input true_6.tex
+\input true_7.tex
 
 %\input{Groups.tex}
 %\input{Polarization.tex}
