--- a/true_7.tex
+++ b/true_7.tex
@@ -1,6 +1,6 @@
 \section{\underline{One Dimensional Harmonic Oscillator}}
 
-1. \underline{Review}
+\subsection{\underline{1. Review}}
 
 First let us review the standard treatment of the linear harmonic oscillator in the coordinate representation which you can find in practically all text books of Quantum Mechanics, e.g, Pauling \& Wislon or Schiff pp. 67 ff. I will assume that you 
 have already done this in a more elementary course in Quantum Mechanics and so I'll only review the more important aspects here. 
