--- a/true_notes.tex
+++ b/true_notes.tex
@@ -285,6 +285,7 @@ level.
 \input true_5.tex
 \input true_6.tex
 \input true_7.tex
+\input true_8.tex
 
 %\input{Groups.tex}
 %\input{Polarization.tex}
