--- a/true_notes.tex
+++ b/true_notes.tex
@@ -102,6 +102,7 @@
 \def\gijinv{g^{ij}}
 \def\gstar{\overline{g}_{\alpha\beta}}
 \def\Kronij{\delta^j_i}
+\def\Ylm{Y_{lm}(\theta,\phi)}
 
 \def\Z{\mathbb{Z}}
 \def\F{\mathbb{F}}
